--- a/app/src/main/res/layout/detail_history_list_layout.xml
+++ b/app/src/main/res/layout/detail_history_list_layout.xml
@@ -70,7 +70,7 @@
             android:textColor="@color/text_primary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Rp100.000"
+            android:text="Rp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
