--- a/app/src/main/res/layout/bottom_sheet_sort_filter.xml
+++ b/app/src/main/res/layout/bottom_sheet_sort_filter.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
-            android:text="Sort &amp; Filter"
+            android:text="Urutkan &amp; Filter"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -165,7 +165,7 @@
             android:layout_gravity="end"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="15dp"
-            android:text="Done"
+            android:text="Selesai"
             app:layout_constraintTop_toBottomOf="@id/filterHistoryDateLayout" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
