--- a/app/src/main/res/layout/bottom_sheet_sort_stock.xml
+++ b/app/src/main/res/layout/bottom_sheet_sort_stock.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
-            android:text="Sort &amp; Filter"
+            android:text="Urutkan &amp; Filter"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -129,7 +129,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:focusable="false"
-                android:hint="Start Date"
+                android:hint="Tanggal Mulai"
                 app:layout_constraintEnd_toStartOf="@id/stockRangeText"
                 app:layout_constraintStart_toEndOf="@id/dateStockRangeButton"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -152,7 +152,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:focusable="false"
-                android:hint="End Date"
+                android:hint="Tanggal Selesai"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/stockRangeText"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -166,7 +166,7 @@
             android:layout_gravity="end"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="15dp"
-            android:text="Done"
+            android:text="Selesai"
             app:layout_constraintTop_toBottomOf="@id/filterStockDateLayout" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
