--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -213,7 +213,8 @@
                 android:hint="Modal Terbaru"
                 android:inputType="number"
                 android:maxLines="1"
-                app:layout_constraintTop_toBottomOf="@id/currentCapitalLabel" />
+                app:layout_constraintTop_toBottomOf="@id/currentCapitalLabel"
+                tools:layout_editor_absoluteX="0dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
